# gif-studio

./: .env.example  .gitignore  .vercelignore  BUILD_SPEC.md  LICENSE  README.md  build-vercel.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements-web.txt  requirements.txt  run.py  run_web_api.py  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml
docs/: AI_GIF_STACK.md  AI_TAB.md  GIF_STUDIO_COMPLETE_PRODUCTION_MANUAL.md  GIF_STUDIO_CRITICAL_SENIOR_REVIEW.md  GIF_STUDIO_CURSOR_PRODUCTION_BUILD_PLAN.md  GIF_STUDIO_MEGA_SENIOR_BUILD.md  GIF_STUDIO_SENIOR_ARCHITECTURE_REVIEW.md  GIF_STUDIO_SENIOR_PRODUCTION_ARCHITECTURE.md  STUDIO_IMAGE_PROCESSING.md
docs/adr/: 0001-project-v2-schema.md  0010-ai-local-backend-routing.md  0013-enhanced-replace-rollback.md  0015-pixelate-vs-redact.md  README.md
docs/production-refactor/: ARCHITECTURE.md  ASYNC_TASKS.md  BASELINE.md  CURSOR_PRODUCTION_BUILD_PLAN.md  OBSERVABILITY.md  PERFORMANCE_BUDGETS.md  PRODUCTION_READINESS_REPORT.md  PROJECT_FORMAT.md  README.md  RENDERING_CONTRACT.md  SECURITY_PRIVACY.md  STATUS.md  TEST_STRATEGY.md
examples/: alive_parallax.py  batch_example.py
models/: .gitkeep  README.md
schemas/: project-v2.schema.json
scripts/: build_executable.py  check-openapi-drift.mjs  install.mjs  install.sh  run-api.mjs  setup_ai_models.py  start-both.mjs
src/: App.jsx  index.css
src/ai/: depth.js  (+10 more)
tests/: test_api_v1_jobs.py  test_cli.py  test_engine.py  test_models_install_api.py  test_ui_smoke.py
(+210 files in other folders)
